# simpsons_tapped_out_web

./: .gitignore  Cargo.toml  README.md  build.sh  package.json
src/: assets.rs  game.rs  input.rs  lib.rs  renderer.rs  sprite.rs  utils.rs
web/: index.html  main.js  style.css  style_tasks.css
web/assets/Characters/Homer/Play with his myPad/: desktop.ini
