[package]
name = "simpsons-tapped-out-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "MouseEvent",
  "KeyboardEvent",
  "TouchEvent",
  "TouchList",
  "Touch",
  "Event",
  "EventTarget",
  "Performance",
  "console",
  "ImageBitmap",
  "ImageData",
  "HtmlImageElement",
  "Request",
  "RequestInit",
  "Response",
  "Headers",
]

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[profile.release]
opt-level = "s"
lto = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
